# linshot-screenshot-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: capture_overlay.h  crosshair_drawer.h  cursor_manager.h  editor_tools.h  main_window.h  screen_capture.h  screenshot_history.h  utils.h
src/: capture_overlay.c  crosshair_drawer.c  editor_tools.c  main.c  main_window.c  screen_capture.c  screenshot_history.c  utils.c
